# hoyoSDK

./: Cargo.toml  LICENSE  README.md  sdk.db-shm  sdk.db-wal  sdk.default.toml
html/: register.html  result.html
src/: config.rs  main.rs  util.rs
src/database/: mod.rs  schema.rs
src/handlers/: combo_granter.rs  mdk_shield_api.rs  mod.rs  register.rs  risky_api.rs
